# WorkoutEditor

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Dockerfile  PKDBUILD  PKGBUILD  README.md
.github/workflows/: cmake-single-platform.yml
WorkoutChart/: .qmlls.ini  CMakeLists.txt  chart-testing.cpp  main.cpp  main.ui.qml  main.ui.qmlfake85673.qmlproject.qtds  qmldir  resources.qrc  testing.cpp  workoutchart.cpp  workoutchart.hpp
WorkoutLib/: CMakeLists.txt  ergworkout.cpp  ergworkout.hpp  fitworkout.cpp  fitworkout.hpp  mrcworkout.cpp  mrcworkout.hpp  planworkout.cpp  planworkout.hpp  workout.cpp  workout.hpp
